ingress/01-ingress-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: exn-svc
  namespace: ingress-ns
spec:
  type: ExternalName
  externalName: flask-svc.blue-ns.svc.cluster.local
  # externalName: flask-svc.green-ns.svc.cluster.local
  ports:
  - port: 80
